--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
-baseURL = "http://example.org/"
+baseURL = "https://carlo-colombo.github.io/"
 languageCode = "en-us"
 title = "litblog"
 theme = "kiss"
+copyright = "&copy; <a href=\"https://github.com/carlo-colombo\">Carlo Colombo</a> 2021"
 
 [params.social.config]
 platforms = ["github","linkedin"]
